# discretized_movement

./: .gitignore  CMakeLists.txt  README.md  package.xml
action/: Interact.action  Move.action
include/discretized_movement/: Bounding_Box.hpp  Discretized_Interact_Action.hpp  Discretized_Movement_Action.hpp  Discretized_Movement_Param_Server.hpp  Discretized_Space_Updater.hpp  Standard_Parameter_Names.h  World_Object.hpp  World_State.hpp  standard_parameter_names.h
launch/: as_gridworld.launch  discretized_fetch.launch  object_detection.launch  rlproject.launch
msg/: interact.msg  movement.msg  robotstate.msg  worldobject.msg  worldstate.msg
src/: cloud_parse2.py  cloud_parser.py  depth_to_worldstate.py  get_planning_scene_spoofer.py  movement_server.cpp  sample_mover.py  sample_world_populator.py
src/data/: data.yaml
